--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Sippy Cup
+title: Oomph Grey Matter
 description: A wireframe system for quick HTML/SASS prototypes
   
 markdown: redcarpet
@@ -6,12 +6,18 @@ highlighter: pygments
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript"]
 
-baseurl: '/'
+baseurl: '/grey-matter/'
 port: 4000
-url: //jhogue.dev.oomphcloud.com/sippy-cup/
+url: //jhogue.dev.oomphcloud.com
+twitter_handle: oomphinc
 
+# Define some defaults
+defaults:
+  -
+    values:
+      layout: "page"
+      author: "Oomph, Inc."
 
-twitter_handle: 
 
 # Permalink Configuration
 permalink: /blog/:year/:month/:title
