--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ defaults:
 # Permalink Configuration
 permalink: /blog/:year/:month/:title
 
-exclude: ['Gemfile', 'Gemfile.lock', 'Rakefile', 'node_modules', 'Procfile', 'feed.xml']
+exclude: ['Gemfile', 'Gemfile.lock', 'Rakefile', 'LICENSE', 'feed.xml']
 
 #Setting relative permalink to false. See http://jekyllrb.com/docs/upgrading/.
 relative_permalinks: false
