--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,13 @@ description: A wireframe system for quick HTML/SASS prototypes
 markdown: redcarpet
 highlighter: pygments
 redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript"]
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data"]
 
 baseurl: '/grey-matter/'
 port: 4040
 url: //jhogue.dev.oomphcloud.com
 twitter_handle: oomphinc
+
 
 # Define some defaults
 defaults:
@@ -22,10 +23,16 @@ defaults:
 # Permalink Configuration
 permalink: /blog/:year/:month/:title
 
-exclude: ['Gemfile', 'Gemfile.lock', 'Rakefile', 'LICENSE', 'feed.xml']
+exclude: ['.git', '.gitignore', 'Gemfile', 'Gemfile.lock', 'LICENSE', 'feed.xml']
+
 
 #Setting relative permalink to false. See http://jekyllrb.com/docs/upgrading/.
 relative_permalinks: false
 
 sass:
   sass_dir: _sass
+  
+
+# Plugins and extras
+plugins:
+- jekyll-autoprefixer
